--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,6 @@
 version: '3'
 services:
   website:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: ${DOCKER_USERNAME}/${DOCKERHUB_REPONAME}:${VERSION}
     ports:
       - "8083:80"
-
-
