--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Docker Image
+name: Test Docker Image
 
 on:
   push:
@@ -6,16 +6,22 @@ on:
       - main
 
 jobs:
-  build:
-    runs-on: [your_build_vm_runner]  # Replace with the appropriate runner
+  test:
+    runs-on: [self-hosted, your_test_vm_runner]  # Replace with the appropriate runner
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Build and Push Docker Image
-      uses: docker/build-push-action@v2
+    - name: Set up SSH
+      uses: webfactory/ssh-agent@v0.5.3
       with:
-        context: .
-        push: true
-        tags: your_dockerhub_username/your_image_name:latest
+        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY_TEST }}
+
+    - name: Pull Docker Image
+      run: ssh tamireilon@34.165.0.109 'docker pull your_dockerhub_username/your_image_name:latest'
+
+    - name: Run Tests
+      run: |
+        # Add your test commands here
+        ssh user@your_test_vm_ip 'docker run your_dockerhub_username/your_image_name:latest'
