--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -49,7 +49,7 @@ jobs:
           fi
         done
 
-  deploy:
+  deploy-to-gke:
     needs: run-and-check
     runs-on: ubuntu-latest
     
@@ -57,19 +57,18 @@ jobs:
     - name: Set up Google Cloud SDK
       uses: google-github-actions/setup-gcloud@v0.3.0
       with:
-        service_account_key: ${{ secrets.GCP_SA_KEY }}
         project_id: ${{ secrets.GCP_PROJECT_ID }}
+        service_account_key: ${{ secrets.GCP_SA_KEY }}
         export_default_credentials: true
-
-    - name: Configure kubectl
-      run: |
-        gcloud container clusters get-credentials tamir-cluster --region me-west1 --project ${{ secrets.GCP_PROJECT_ID }}
 
     - name: Create GKE Cluster
       run: |
-        gcloud container clusters create tamir-cluster --region=me-west1 --num-nodes=3 --project=${{ secrets.GCP_PROJECT_ID }}
-
-    - name: Deploy to GKE Cluster
+        gcloud container clusters create my-cluster --num-nodes=3 --zone=me-west1-a
+        
+    - name: Get GKE Credentials
+      run: gcloud container clusters get-credentials my-cluster --zone=me-west1-a
+      
+    - name: Deploy to GKE
       run: |
-        kubectl run your-app-deployment --image=${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKERHUB_REPO }}:latest --port=80 --generator=run-pod/v1
-        kubectl expose deployment your-app-deployment --type=LoadBalancer --port 80 --target-port 80
+        kubectl create deployment my-app --image=${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKERHUB_REPO }}:latest
+        kubectl expose deployment my-app --type=LoadBalancer --port=80 --target-port=80
