--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -46,25 +46,36 @@ jobs:
             sleep 5
           fi
         done
-  deploy-to-gke:
-    needs: run-and-check
-    runs-on: ubuntu-latest
-    
-    steps:
-    - name: Set up Google Cloud SDK
-      uses: google-github-actions/setup-gcloud@v0.3.0
-      with:
-        project_id: ${{ secrets.GCP_PROJECT_ID }}
-        service_account_key: ${{ secrets.GCP_SA_KEY }}
-
-    - name: Create GKE Cluster
-      run: |
-        gcloud container clusters create my-cluster --num-nodes=3 --zone=me-west1-a
         
-    - name: Get GKE Credentials
-      run: gcloud container clusters get-credentials my-cluster --zone=me-west1-a
-      
-    - name: Deploy to GKE
-      run: |
-        kubectl create deployment my-app --image=${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKERHUB_REPO }}:latest
-        kubectl expose deployment my-app --type=LoadBalancer --port=80 --target-port=80
+  deploy_to_gke:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v0.2.0
+        with:
+          service_account_key: ${{ secrets.GCP_SA_KEY }}  # Provide your GCP service account key as a secret
+          project_id: myfinalproject2-395806
+          export_default_credentials: true
+
+      - name: Configure Docker credentials
+        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+
+      - name: Pull image from DockerHub
+        run: docker pull ${{ secrets.DOCKERHUB_REPO }}:latest # <dockerhub-image-name:tag>
+
+      - name: Tag image for GCP Container Registry
+        run: |
+          docker tag ${{ secrets.DOCKERHUB_REPO }}:latest gcr.io/myfinalproject2-395806/my-app:latest
+          docker push gcr.io/myfinalproject2-395806/my-app:latest
+
+      - name: Configure kubectl
+        run: gcloud container clusters get-credentials my-cluster --zone me-west1
+
+      - name: Deploy to GKE
+        run: |
+          kubectl set image deployment/my-deployment my-container=gcr.io/myfinalproject2-395806/my-app:latest
+          
