--- a/deployment.yml
+++ b/deployment.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-    name: app-deployment
+    name: my-deployment
 spec:
     replicas: 3
     selector:
@@ -10,10 +10,10 @@ spec:
     template:
         metadata:
             labels:
-              app: your-app
+              app: my-app
         spec:
             containers:
-            - name: app-container
+            - name: my-container
                 image: tamireilon/portfolio-website:latest
                 ports:
                 - containerPort: 80
