--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -66,7 +66,7 @@ jobs:
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Pull image from DockerHub
-        run: docker pull ${{ secrets.DOCKERHUB_REPO }}:latest # <dockerhub-image-name:tag>
+        run: docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKERHUB_REPO }}:latest # <dockerhub-image-name:tag>
 
       - name: Tag image for GCP Container Registry
         run: |
