--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -70,7 +70,7 @@ jobs:
 
       - name: Tag image for GCP Container Registry
         run: |
-          docker tag ${{ secrets.DOCKERHUB_REPO }}:latest gcr.io/myfinalproject2-395806/my-app:latest
+          docker tag ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKERHUB_REPO }}:latest gcr.io/myfinalproject2-395806/my-app:latest
           docker push gcr.io/myfinalproject2-395806/my-app:latest
 
       - name: Configure kubectl
