--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -15,7 +15,7 @@ jobs:
 
     - name: Build Docker Image
       run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKERHUB_REPO }}:latest .
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest .
     - name: Log in to Docker Hub
       uses: docker/login-action@v1
       with:
@@ -24,7 +24,7 @@ jobs:
     
     - name: Push Docker Image
       run: |
-        docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKERHUB_REPO }}:latest
+        docker push ${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest
   run-and-check:
     needs: build-and-push
     runs-on: ubuntu-latest
@@ -32,8 +32,8 @@ jobs:
     steps:
     - name: Pull Docker Image
       run: |
-        docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKERHUB_REPO }}:latest
-        docker run -d -p 80:80 ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKERHUB_REPO }}:latest
+        docker pull ${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest
+        docker run -d -p 80:80 ${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest
         
     - name: Check if Container is Running
       run: |
@@ -66,11 +66,11 @@ jobs:
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Pull image from DockerHub
-        run: docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKERHUB_REPO }}:latest # <dockerhub-image-name:tag>
+        run: docker pull ${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest # <dockerhub-image-name:tag>
 
       - name: Tag image for GCP Container Registry
         run: |
-          docker tag ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKERHUB_REPO }}:latest gcr.io/myfinalproject2-395806/my-first-artifact-repo:latest
+          docker tag ${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest gcr.io/myfinalproject2-395806/my-first-artifact-repo:latest
           docker push gcr.io/myfinalproject2-395806/my-first-artifact-repo:latest
 
       - name: Configure kubectl
