--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -47,34 +47,31 @@ jobs:
           fi
         done
         
-  deploy_to_gke:
-    needs: run-and-check
-    runs-on: ubuntu-latest
-  
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-  
-      - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v0.2.0
-        with:
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          project_id: myfinalproject2-395806
-          export_default_credentials: true
-  
-      - name: Install gke-gcloud-auth-plugin
-        run: gcloud components install kubectl-gke-auth-plugin
-  
-      - name: Configure Docker credentials
-        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-  
-      - name: Pull image from DockerHub
-        run: docker pull ${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest
-  
-      - name: Configure kubectl
-        run: gcloud container clusters get-credentials my-cluster --zone me-west1
-  
-      - name: Deploy to GKE
-        run: |
-          kubectl create deployment my-app --image=${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest
-          kubectl expose deployment my-app --type=LoadBalancer --port=80 --target-port=80
+  needs: run-and-check
+  runs-on: ubuntu-latest
+
+  steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up Google Cloud SDK
+      uses: google-github-actions/setup-gcloud@v0.2.0
+      with:
+        service_account_key: ${{ secrets.GCP_SA_KEY }}
+        project_id: myfinalproject2-395806
+        export_default_credentials: true
+
+    - name: Configure Docker credentials
+      run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+    - name: Pull image from DockerHub
+      run: docker pull ${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest
+
+    - name: Configure kubectl
+      run: |
+        gcloud container clusters get-credentials my-cluster --zone me-west1
+
+    - name: Deploy to GKE
+      run: |
+        kubectl create deployment my-app --image=${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest
+        kubectl expose deployment my-app --type=LoadBalancer --port=80 --target-port=80
