--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -66,6 +66,9 @@ jobs:
       - name: Set kubectl context to GKE
         run: gcloud container clusters get-credentials my-cluster --region me-west1
 
+      - name: install
+        run: sudo apt-get install google-cloud-sdk-gke-gcloud-auth-plugin
+
       - name: Apply Kubernetes manifests
         run: kubectl apply -f deployment.yml
   
