--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -53,27 +53,24 @@ jobs:
     runs-on: ubuntu-latest
   
     steps:
-      - name: Checkout Code
+      - name: Checkout code
         uses: actions/checkout@v2
-      
-      - name: Install Google Cloud SDK
-        run: |
-          curl -O https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-367.0.0-linux-x86_64.tar.gz
-          tar -xvf google-cloud-sdk-367.0.0-linux-x86_64.tar.gz
-          ./google-cloud-sdk/install.sh
+  
+      - name: Set up Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v0.2.0
+        with:
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          project_id: myfinalproject2-395806
+          export_default_credentials: true
+  
+      - name: Pull image from DockerHub
+        run: docker pull ${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest
 
-      - name: Configure Google Cloud SDK
-        run: gcloud init --console-only
+      - name: Set kubectl context to GKE
+        run: gcloud container clusters get-credentials my-cluster --region me-west1
 
-      - name: Install kubectl
-        run: gcloud components install kubectl
-
-      - name: Configure gke-gcloud-auth-plugin
-        run: gcloud auth configure-docker
-
-      - name: Authenticate with GKE
-        run: gcloud container clusters get-credentials my-cluster --zone=me-west1
-
-      - name: Deploy to GKE
+      - name: Apply Kubernetes manifests
         run: kubectl apply -f deployment.yml
   
+      - name: Trigger GKE rollout
+        run: kubectl rollout restart deployment my-deployment
