--- a/deployment.yml
+++ b/deployment.yml
@@ -16,4 +16,17 @@ spec:
         - name: my-container
           image: tamireilon/portfolio-website:latest
           ports:
-              - containerPort: 80
+            - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: my-service
+spec:
+  type: LoadBalancer
+  selector:
+    app: my-app
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
