--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -15,7 +15,15 @@ jobs:
 
     - name: Build Docker Image
       run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest .
+        # Increment version number
+        MAJOR=1
+        MINOR=0
+        PATCH=$((PATCH+1))
+        NEW_VERSION="$MAJOR.$MINOR.$PATCH"
+
+        # Build the Docker image with the new version tag
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/portfolio-website:$NEW_VERSION .
+        
     - name: Log in to Docker Hub
       uses: docker/login-action@v1
       with:
@@ -24,6 +32,8 @@ jobs:
     
     - name: Push Docker Image
       run: |
+        docker push ${{ secrets.DOCKER_USERNAME }}/portfolio-website:$NEW_VERSION
+        docker tag ${{ secrets.DOCKER_USERNAME }}/portfolio-website:$NEW_VERSION ${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest
         docker push ${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest
         
   run-and-check:
