--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -16,23 +16,15 @@ jobs:
     - name: Build Docker Image
       run: |
         docker build -t ${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest .
-        
     - name: Log in to Docker Hub
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     
-    - name: Push Docker Image (versioned)
+    - name: Push Docker Image
       run: |
-        # Push the versioned tag
-        docker push "${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest"
-
-    - name: Push Docker Image (latest)
-      run: |
-        # Push the latest tag
-        docker tag "${{ secrets.DOCKER_USERNAME }}/portfolio-website:$NEW_VERSION" "${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest"
-        docker push "${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest"
+        docker push ${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest
         
   run-and-check:
     needs: build-and-push
