--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,8 +13,23 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v2
 
+    - name: Determine Semantic Version Bump
+      id: semver
+      run: |
+        COMMIT_MESSAGE=$(git log --format=%B -n 1 $GITHUB_SHA)
+        if echo "$COMMIT_MESSAGE" | grep -qiE 'major'; then
+          BUMP='major'
+        elif echo "$COMMIT_MESSAGE" | grep -qiE 'minor'; then
+          BUMP='minor'
+        else
+          BUMP='patch'
+        fi
+        echo "SEMVER=$(git describe --tags --abbrev=0 | awk -F. -v bump=$BUMP '{if(bump=="major") {$1+=1; $2=0; $3=0} else if(bump=="minor") {$2+=1; $3=0} else {$3+=1} print}')"
+        echo "BUMP=$BUMP" >> $GITHUB_ENV
+        
     - name: Build Docker Image
       run: |
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/portfolio-website:${{ env.SEMVER }} .
         docker build -t ${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest .
     - name: Log in to Docker Hub
       uses: docker/login-action@v1
@@ -24,6 +39,7 @@ jobs:
     
     - name: Push Docker Image
       run: |
+        docker push ${{ secrets.DOCKER_USERNAME }}/portfolio-website:${{ env.SEMVER }}
         docker push ${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest
         
   run-and-check:
