--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -29,8 +29,9 @@ jobs:
         
     - name: Build Docker Image
       run: |
-        docker build -t "${{ secrets.DOCKER_USERNAME }}/portfolio-website:${{ env.SEMVER }}" .
-        docker build -t "${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest" .
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/portfolio-website:${{ env.SEMVER }} .
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest .
+        
     - name: Log in to Docker Hub
       uses: docker/login-action@v1
       with:
