--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -16,15 +16,21 @@ jobs:
     - name: Determine Semantic Version Bump
       id: semver
       run: |
-        COMMIT_MESSAGE=$(git log --format=%B -n 1 $GITHUB_SHA)
-        if echo "$COMMIT_MESSAGE" | grep -qiE 'major'; then
-          BUMP='major'
-        elif echo "$COMMIT_MESSAGE" | grep -qiE 'minor'; then
-          BUMP='minor'
+        if git describe --tags --abbrev=0 >/dev/null 2>&1; then
+          LATEST_TAG=$(git describe --tags --abbrev=0)
+          COMMIT_MESSAGE=$(git log --format=%B -n 1 $GITHUB_SHA)
+          if echo "$COMMIT_MESSAGE" | grep -qiE 'major'; then
+            BUMP='major'
+          elif echo "$COMMIT_MESSAGE" | grep -qiE 'minor'; then
+            BUMP='minor'
+          else
+            BUMP='patch'
+          fi
+          SEMVER=$(echo "$LATEST_TAG" | awk -F. -v bump=$BUMP '{if(bump=="major") {$1+=1; $2=0; $3=0} else if(bump=="minor") {$2+=1; $3=0} else {$3+=1} print}')
         else
-          BUMP='patch'
+          SEMVER="1.0.0"  # Default initial version
         fi
-        echo "SEMVER=$(git describe --tags --abbrev=0 | awk -F. -v bump=$BUMP '{if(bump=="major") {$1+=1; $2=0; $3=0} else if(bump=="minor") {$2+=1; $3=0} else {$3+=1} print}')"
+        echo "SEMVER=$SEMVER"
         echo "BUMP=$BUMP" >> $GITHUB_ENV
         
     - name: Build Docker Image
