--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,6 +13,12 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v2
 
+    - name: Get Latest Docker Version
+      id: latest_version
+      run: |
+        LATEST_VERSION=$(docker pull ${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest | awk -F ':| ' 'NR==2{print $2}')
+        echo "LATEST_VERSION=$LATEST_VERSION" >> $GITHUB_ENV
+
     - name: Determine Semantic Version Bump
       id: semver
       run: |
@@ -24,8 +30,8 @@ jobs:
         else
           BUMP='patch'
         fi
-        echo "SEMVER=$(git describe --tags --abbrev=0 | awk -F. -v bump=$BUMP '{if(bump=="major") {$1+=1; $2=0; $3=0} else if(bump=="minor") {$2+=1; $3=0} else {$3+=1} print}')"
         echo "BUMP=$BUMP" >> $GITHUB_ENV
+        echo "Updating $BUMP version"
         
     - name: Build Docker Image
       run: |
