--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -30,6 +30,8 @@ jobs:
         else
           BUMP='patch'
         fi
+        PREVIOUS_VERSION=$(echo "${{ env.LATEST_VERSION }}" | sed -E 's/(.*)\.[0-9]+$/\1/')
+        echo "SEMVER=$PREVIOUS_VERSION.$(echo "${{ env.LATEST_VERSION }}" | awk -F. '{if("'"${BUMP}"'"=="major") {$1+=1; $2=0; $3=0} else if("'"${BUMP}"'"=="minor") {$2+=1; $3=0} else {$3+=1} print}')"
         echo "BUMP=$BUMP" >> $GITHUB_ENV
         echo "Updating $BUMP version"
         
