--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -30,8 +30,16 @@ jobs:
         else
           BUMP='patch'
         fi
-        PREVIOUS_VERSION=$(echo "${{ env.LATEST_VERSION }}" | sed -E 's/(.*)\.[0-9]+$/\1/')
-        echo "SEMVER=$PREVIOUS_VERSION.$(echo "${{ env.LATEST_VERSION }}" | awk -F. '{if("'"${BUMP}"'"=="major") {$1+=1; $2=0; $3=0} else if("'"${BUMP}"'"=="minor") {$2+=1; $3=0} else {$3+=1} print}')"
+        PREVIOUS_VERSION=$(echo "${{ env.LATEST_VERSION }}" | awk -F '.' '{print $1"."$2}')
+        PATCH=$(echo "${{ env.LATEST_VERSION }}" | awk -F '.' '{print $3}')
+        if [ "$BUMP" == "major" ]; then
+          NEW_VERSION="$((PREVIOUS_VERSION + 1)).0.0"
+        elif [ "$BUMP" == "minor" ]; then
+          NEW_VERSION="$PREVIOUS_VERSION.$((PATCH + 1)).0"
+        else
+          NEW_VERSION="$PREVIOUS_VERSION.$((PATCH + 1))"
+        fi
+        echo "SEMVER=$NEW_VERSION"
         echo "BUMP=$BUMP" >> $GITHUB_ENV
         echo "Updating $BUMP version"
         
