--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,40 +13,48 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v2
 
-    - name: Get Latest Docker Version
-      id: latest_version
+    - name: Get Last Version
+      id: get_last_version
       run: |
-        LATEST_VERSION=$(docker pull ${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest | awk -F ':| ' 'NR==2{print $2}')
-        echo "LATEST_VERSION=$LATEST_VERSION" >> $GITHUB_ENV
+        last_version=$(curl -s "https://registry.hub.docker.com/v2/repositories/${{ secrets.DOCKER_USERNAME }}/portfolio-website/tags/?page_size=10" | jq -r '.results[].name' | grep -E '^[0-9]+\.[0-9]+\.[0-9]+$' | sort -V | tail -n 1)
+        echo "::set-output name=last_version::$last_version"
+      env:
+        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
 
-    - name: Determine Semantic Version Bump
-      id: semver
+    - name: Determine Version Bump
+      id: determine_version_bump
       run: |
-        COMMIT_MESSAGE=$(git log --format=%B -n 1 $GITHUB_SHA)
-        if echo "$COMMIT_MESSAGE" | grep -qiE 'major'; then
-          BUMP='major'
-        elif echo "$COMMIT_MESSAGE" | grep -qiE 'minor'; then
-          BUMP='minor'
+        commit_message=$(git log -1 --pretty=%B)
+        if echo "$commit_message" | grep -qE '\[semver:(major|minor|patch)\]'; then
+          echo "::set-output name=bump_type::$(echo "$commit_message" | grep -oE '\[semver:(major|minor|patch)\]' | sed 's/\[semver://;s/\]//')"
         else
-          BUMP='patch'
+          echo "::set-output name=bump_type::patch"
         fi
-        PREVIOUS_VERSION=$(echo "${{ env.LATEST_VERSION }}" | awk -F '.' '{print $1"."$2}')
-        PATCH=$(echo "${{ env.LATEST_VERSION }}" | awk -F '.' '{print $3}')
-        if [ "$BUMP" == "major" ]; then
-          NEW_VERSION="$((PREVIOUS_VERSION + 1)).0.0"
-        elif [ "$BUMP" == "minor" ]; then
-          NEW_VERSION="$PREVIOUS_VERSION.$((PATCH + 1)).0"
-        else
-          NEW_VERSION="$PREVIOUS_VERSION.$((PATCH + 1))"
-        fi
-        echo "SEMVER=$NEW_VERSION"
-        echo "BUMP=$BUMP" >> $GITHUB_ENV
-        echo "Updating $BUMP version"
+
+    - name: Bump Version
+      id: bump_version
+      run: |
+        current_version="${{ steps.get_last_version.outputs.last_version }}"
+        bump_type="${{ steps.determine_version_bump.outputs.bump_type }}"
+
+        IFS='.' read -r -a version_parts <<< "$current_version"
+        case "$bump_type" in
+          major) new_version="${version_parts[0]}.$((${version_parts[1]} + 1)).0" ;;
+          minor) new_version="${version_parts[0]}.${version_parts[1]}.$((${version_parts[2]} + 1))" ;;
+          *) new_version="${version_parts[0]}.${version_parts[1]}.${version_parts[2]}.$((${version_parts[3]} + 1))" ;;
+        esac
+
+        echo "::set-output name=new_version::$new_version"
         
     - name: Build Docker Image
       run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/portfolio-website:${{ env.SEMVER }} .
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest .
+        new_version="${{ steps.bump_version.outputs.new_version }}"
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/portfolio-website:$new_version .
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
         
     - name: Log in to Docker Hub
       uses: docker/login-action@v1
@@ -56,7 +64,9 @@ jobs:
     
     - name: Push Docker Image
       run: |
-        docker push ${{ secrets.DOCKER_USERNAME }}/portfolio-website:${{ env.SEMVER }}
+        new_version="${{ steps.bump_version.outputs.new_version }}"
+        docker push ${{ secrets.DOCKER_USERNAME }}/portfolio-website:$new_version
+        docker tag ${{ secrets.DOCKER_USERNAME }}/portfolio-website:$new_version ${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest
         docker push ${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest
         
   run-and-check:
