--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -25,8 +25,10 @@ jobs:
       id: determine_version_bump
       run: |
         commit_message=$(git log -1 --pretty=%B)
-        if echo "$commit_message" | grep -qE '\[semver:(major|minor|patch)\]'; then
-          echo "::set-output name=bump_type::$(echo "$commit_message" | grep -oE '\[semver:(major|minor|patch)\]' | sed 's/\[semver://;s/\]//')"
+        if echo "$commit_message" | grep -qiE 'major'; then
+          echo "::set-output name=bump_type::major"
+        elif echo "$commit_message" | grep -qiE 'minor'; then
+          echo "::set-output name=bump_type::minor"
         else
           echo "::set-output name=bump_type::patch"
         fi
@@ -45,17 +47,11 @@ jobs:
         esac
 
         echo "::set-output name=new_version::$new_version"
-        
+
     - name: Build Docker Image
       run: |
         new_version="${{ steps.bump_version.outputs.new_version }}"
         docker build -t ${{ secrets.DOCKER_USERNAME }}/portfolio-website:$new_version .
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-        
     - name: Log in to Docker Hub
       uses: docker/login-action@v1
       with:
