--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,4 +1,4 @@
-name: Build, Push, Run, Check, and Deployy
+name: Build, Push, Run, Check, and Deploy
 
 on:
   push:
@@ -18,6 +18,9 @@ jobs:
       run: |
         last_version=$(curl -s "https://registry.hub.docker.com/v2/repositories/${{ secrets.DOCKER_USERNAME }}/portfolio-website/tags/?page_size=10" | jq -r '.results[].name' | grep -E '^[0-9]+\.[0-9]+\.[0-9]+$' | sort -V | tail -n 1)
         echo "::set-output name=last_version::$last_version"
+        
+      # These lines find the list of all the versions available in my DockerHub repo
+      # and retrieve the last version (the variable is "last_version").
       env:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
 
@@ -33,20 +36,32 @@ jobs:
           echo "::set-output name=bump_type::patch"
         fi
 
+      # These lines retrieve the commit message and check for any key
+      # word such as patch, minor, or major. According to the keyword found
+      # in the message, it will set the variable "bump_type"
+
     - name: Bump Version
       id: bump_version
       run: |
         current_version="${{ steps.get_last_version.outputs.last_version }}"
+        # This line gets the variable from earlier "last_version" and sets it as "current_version"
+        
         bump_type="${{ steps.determine_version_bump.outputs.bump_type }}"
+        # This line gets the variable from earlier "bump_type" and sets it as "bump type"
 
         IFS='.' read -r -a version_parts <<< "$current_version"
+        # This section takes the variable "current_version" and splits it into an array
+        # so it can change each number specifically
+        
         case "$bump_type" in
           major) new_version="$((version_parts[0] + 1)).0.0" ;;
           minor) new_version="${version_parts[0]}.$((version_parts[1] + 1)).0" ;;
           *) new_version="${version_parts[0]}.${version_parts[1]}.$((version_parts[2] + 1))" ;;
         esac
-
         echo "::set-output name=new_version::$new_version"
+
+      # These lines check the version variable and bump it up accordingly 
+
 
     - name: Build Docker Image
       run: |
@@ -57,13 +72,15 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    # 
     
     - name: Push Docker Image
       run: |
         new_version="${{ steps.bump_version.outputs.new_version }}"
-        docker push ${{ secrets.DOCKER_USERNAME }}/portfolio-website:$new_version
+        docker push ${{ secrets.DOCKER_USERNAME }}/portfolio-website:$new_version 
         docker tag ${{ secrets.DOCKER_USERNAME }}/portfolio-website:$new_version ${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest
-        docker push ${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest
+        docker push ${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest 
         
   run-and-check:
     needs: build-and-push
