--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -112,7 +112,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-  
+
+      - name: Install Helm
+        run: |
+          curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
+        
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v0.2.0
         with:
