--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -155,9 +155,12 @@ jobs:
 
       - name: Deploy Prometheus and Grafana
         run: |
-          gcloud container clusters get-credentials my-cluster --region me-west1
-          kubectl apply -f prometheus.yml
-          kubectl apply -f grafana.yml
-
-      - name: Expose Grafana Service
-        run: kubectl expose deployment grafana --type=LoadBalancer --port=3000
+          if helm list -n monitoring | grep -q "prometheus"; then
+            echo "Prometheus is already installed."
+          else
+            kubectl create namespace monitoring
+            helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
+            helm repo update
+            helm install prometheus prometheus-community/kube-prometheus-stack --namespace monitoring
+            echo "Prometheus installed."
+          fi
